Refactor `PrgState` to make `heap` immutable, simplify garbage collection with `toList`, and adjust `Interpreter` entry point visibility.